--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Cities</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Use images of <strong>Singapore</strong> bears or <strong>London</strong> 
     </p>
     <div class='content'>
       <div class='no-display'>
