--- a/app/view/index.html
+++ b/app/view/index.html
@@ -9,7 +9,7 @@
   <div class='center'>
     <div class='title'>Classify Cities</div>
     <p>
-      Use images of <strong>Singapore</strong> bears or <strong>London</strong> 
+      Use images of <strong>Singapore</strong> or <strong>London</strong> 
     </p>
     <div class='content'>
       <div class='no-display'>
